--- a/projects/shell1/src/index.html
+++ b/projects/shell1/src/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Character encoding for the document -->
   <meta charset="utf-8">
+  
+  <!-- Title of the document -->
   <title>Shell1</title>
+  
+  <!-- Base URL for relative URLs in the document -->
   <base href="/">
+  
+  <!-- Viewport settings for responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Link to the favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Root component of the application -->
   <app-root></app-root>
 </body>
 </html>
